--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,15 @@
     {% include footer.html %}
     <script id="dsq-count-scr" src="//https-decision-j-github-io.disqus.com/count.js" async></script>
   </body>
-
+	
 </html>
+
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [['$','$'], ['\\(','\\)']],
+    processEscapes: true
+  }
+});
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
